align-items prperty fixed

--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ h3 {
 @media screen and (min-width: 768px) {
   .experience-header {
     flex-direction: row;
+    align-items: baseline;
   }
 }
 
